水族館・動物園のおすすめ文を変更

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <section>
     <h2>水族館・動物園</h2>
-    <p>水族館・動物園のおすすめ文</p>
+    <p>東京観光でぜひ行って欲しい水族館・動物園です！！</p>
     
     <dl>
         <dt>場所1</dt>
@@ -132,7 +132,8 @@
     <p>（担当者：麻生知成、）</p>
     <p>Copyright &copy 2019 著作権者名</p>
 </footer>
-
+    <p>（担当者：野崎利希哉）</p>
+    <p>Copyright &copy 2019 著作権者名</p>
 </body>
 </html>
 
