グルメ１を追加しました

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
     <h2>グルメ</h2>
     <p>グルメのおすすめ文</p>
     <dl>
-        <dt>グルメ1</dt>
+        <dt>つじ半</dt>
         <dd>
             <ul>
-                <li>テキスト1</li>
-                <li>テキスト2</li>
+                <li>日本一の美しい海鮮丼が食べれるお店！9種の具材がてんこ盛りの海鮮丼</li>
+                <li>住所 ： 東京都中央区日本橋3-1-15 久栄ビル 1F</li>
             </ul>
         </dd>
         <dt>グルメ2</dt>
