おみやげ情報にデータを１件追加しました。

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <p>おみやげのおすすめ文</p>
     
     <dl>
-        <dt>おみやげ1</dt>
+        <dt>東京あんぱん豆一豆（まめいちず）</dt>
         <dd>
             <ul>
                 <li>テキスト1</li>
