サンシャイン水族館の情報を追加

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <p>東京観光でぜひ行って欲しい水族館・動物園です！！</p>
     
     <dl>
-        <dt>場所1</dt>
+        <dt>サンシャイン水族館</dt>
         <dd>
             <ul>
-                <li>テキスト1</li>
-                <li>テキスト2</li>
+                <li>たくさんの種類の生き物が展示されており、子供からお年寄りまで楽しめます</li>
+                <li>東京都豊島区東池袋3-1 </li>
             </ul>
         </dd>
         <dt>場所2</dt>
