グルメ２を追加しました

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                 <li>住所 ： 東京都中央区日本橋3-1-15 久栄ビル 1F</li>
             </ul>
         </dd>
-        <dt>グルメ2</dt>
+        <dt>3丁目のカレー屋さん</dt>
         <dd>
             <ul>
-                <li>テキスト1</li>
-                <li>テキスト2</li>
+                <li>昭和テイストのインテリアにでタイムスリップしたような気分に。オススメは「焼きチーズビーフカレー」。</li>
+                <li>住所 ： 東京都中央区京橋3-9-9 ウィンド京橋ビル B1F</li>
             </ul>
         </dd>
     </dl>
