東京あんぱんに情報を追加しました。

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <dt>東京あんぱん豆一豆（まめいちず）</dt>
         <dd>
             <ul>
-                <li>テキスト1</li>
-                <li>テキスト2</li>
+                <li>東京駅丸の内駅舎の赤レンガをイメージした四角いパン</li>
+                <li>販売場所：東京あんぱん豆-豆（まめいちず） エキュート東京店（JR東京駅構内1Fサウスコート内）</li>
             </ul>
         </dd>
         <dt>おみやげ2</dt>
